# resnet

./: README.md  pyproject.toml
.github/workflows/: python-tests.yaml
jax_resnet/: resnet.py
src/jax_resnet/: __init__.py  resnet.py
tests/: benchmark_regression.py  test_benchmark_regression.py  test_resnet.py  test_verify_hand_calcs.py
