[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-resnet"
authors = [
  {name = "Max Gardenswartz", email = "mgardenswartz@ufl.edu"},
  {name = "Cristian Nino"}
]
maintainers = [
  {name = "Max Gardenswartz", email = "mgardenswartz@ufl.edu"}
]
version = "1.0.0"
description = "A lightweight JAX ResNet implementation for controls research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax",
    "jaxlib",
]

[tool.setuptools.packages.find]
where = ["src"]
