[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-resnet"
version = "1.2.0"
description = "A lightweight JAX ResNet implementation for controls research"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Max Gardenswartz", email = "mgardenswartz@ufl.edu"},
  {name = "Cristian Nino"}
]
maintainers = [
  {name = "Max Gardenswartz", email = "mgardenswartz@ufl.edu"}
]
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]", 
]
cuda13 = [
    "jax[cuda13]", 
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
